package com.accessaudit.backend.domain;

/**
 * Nível de severidade de um problema de acessibilidade.
 * Referência: TG3.5 e TG3.6 (enum severidade).
 */
public enum Severidade {
    BAIXA,
    MEDIA,
    ALTA
}
