package com.accessaudit.backend.domain;

/**
 * Tipo de entrada para uma auditoria de acessibilidade.
 * Referência: TG3.5/01-classes_implementacao.puml e TG3.6 (enum tipoEntrada).
 */
public enum TipoEntrada {
    URL,
    HTML
}
