@startuml classes_implementacao
title AccessAudit — Diagrama de Classes (Implementação)

skinparam classAttributeIconSize 0
skinparam shadowing false
hide circle

package "controller" {
  class AuditoriaController {
    - service: AuditoriaService
    + criar(req: AuditoriaRequest): RelatorioResponse
    + consultar(id: UUID): RelatorioResponse
  }
}

package "dto" {
  class AuditoriaRequest {
    + tipoEntrada: TipoEntrada
    + url: String
    + html: String
  }
  class RelatorioResponse {
    + id: UUID
    + geradoEm: DateTime
    + totalProblemas: int
    + problemas: List<ProblemaResponse>
  }
  class ProblemaResponse {
    + codigoRegra: String
    + severidade: String
    + descricao: String
    + recomendacao: String
  }
}

package "service" {
  class AuditoriaService {
    - coletor: ColetorConteudo
    - motor: MotorAuditoria
    - repository: AuditoriaRepository
    + executar(req: AuditoriaRequest): Relatorio
    + buscar(id: UUID): Relatorio
  }
  interface ColetorConteudo {
    + obterHtml(url: String): String
  }
  class JsoupColetor implements ColetorConteudo
  class MotorAuditoria {
    - regras: List<RegraAuditoria>
    + analisar(html: String): List<ProblemaAcessibilidade>
  }
  interface RegraAuditoria {
    + avaliar(doc: Document): List<ProblemaAcessibilidade>
  }
  class RegraImgSemAlt implements RegraAuditoria
  class RegraInputSemLabel implements RegraAuditoria
  class RegraLinkTextoGenerico implements RegraAuditoria
  class RegraLangAusente implements RegraAuditoria
  class RegraTitleAusente implements RegraAuditoria
}

package "repository" {
  interface AuditoriaRepository {
    + save(a: Auditoria): Auditoria
    + findById(id: UUID): Optional<Auditoria>
  }
}

package "domain" {
  class Auditoria {
    + id: UUID
    + tipoEntrada: TipoEntrada
    + url: String
    + htmlBruto: String
    + dataExecucao: DateTime
    + relatorio: Relatorio
  }
  class Relatorio {
    + id: UUID
    + geradoEm: DateTime
    + totalProblemas: int
    + problemas: List<ProblemaAcessibilidade>
  }
  class ProblemaAcessibilidade {
    + id: UUID
    + codigoRegra: RegraCodigo
    + severidade: Severidade
    + descricao: String
    + recomendacao: String
  }
  enum TipoEntrada {
    URL
    HTML
  }
  enum Severidade {
    BAIXA
    MEDIA
    ALTA
  }
  enum RegraCodigo {
    IMG_SEM_ALT
    INPUT_SEM_LABEL
    LINK_TEXTO_GENERICO
    LANG_AUSENTE
    TITLE_AUSENTE
  }
}

AuditoriaController --> AuditoriaService
AuditoriaService --> ColetorConteudo
AuditoriaService --> MotorAuditoria
AuditoriaService --> AuditoriaRepository
MotorAuditoria --> RegraAuditoria
Auditoria "1" --> "1" Relatorio
Relatorio "1" --> "0..*" ProblemaAcessibilidade
ProblemaAcessibilidade --> Severidade
ProblemaAcessibilidade --> RegraCodigo
Auditoria --> TipoEntrada

@enduml
